kubernet-service/Ingress/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
