kubernet-service/Ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-controller
spec:
  rules:
    - host: vtanh1905.com
      http:
        paths:
          - path: /
            backend:
              serviceName: service-web
              servicePort: 80
